# uc-transcripts

./: .env.example  .gitignore  README.md  pyproject.toml
src/uc_transcripts/: __init__.py  cache.py  config.py  models.py  parser.py  prompts.py  transcripts.py  utils.py  youtube.py
