[project]
name = "uc-transcripts"
version = "0.1.0"
description = "Fetch and parse University Challenge transcripts from YouTube"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api>=1.2.0",
    "openai>=1.0.0",
    "google-api-python-client>=2.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "tiktoken>=0.5.0",
]
authors = [
    {name = "Adil"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.37.0",
]
